<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="2dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/home_public_texts"
				android:gravity="center_horizontal"
				android:textSize="18sp"
				android:textColor="#3F51B5"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:background="#C4C4C4"
				android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"
				android:layout_marginTop="4dp"
				android:layout_marginBottom="4dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/home_public_texts_context_pack1"
				android:textColor="#FF000000"
				android:textSize="14sp"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:background="#C4C4C4"
				android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"
				android:layout_marginTop="4dp"
				android:layout_marginBottom="4dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/home_public_texts_context_pack2"
				android:textColor="#FF000000"
				android:textSize="14sp"/>

		</LinearLayout>

	</android.support.v7.widget.CardView>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/home_have_in_common"
		android:textSize="14sp"
		android:textStyle="bold"
		android:textColor="#FF3F51B5"
		android:layout_marginLeft="16dp"/>

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="2dp"
			android:id="@+id/homes_aide_dl">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/home_aide_download"
				android:gravity="center_horizontal"
				android:textColor="#FF3F51B5"
				android:textSize="16sp"
				android:textStyle="bold"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/home_intro_for_aide"
				android:textSize="14sp"
				android:textColor="#FF000000"/>

		</LinearLayout>

	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginRight="16dp"
		android:layout_marginLeft="16dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="2dp"
			android:id="@+id/homes_dev_website">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/home_android_dev_website"
				android:gravity="center_horizontal"
				android:textColor="#FF3F51B5"
				android:textSize="16sp"
				android:textStyle="bold"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/home_intro_for_dev"
				android:textSize="14sp"
				android:textColor="#FF000000"/>

		</LinearLayout>

	</android.support.v7.widget.CardView>

</LinearLayout>

